# osw-package-maintenance

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.cfg
scripts/: build_packages.py  check_dependencies.py  delete_pages.py  git_add_required_pages.py  org.open-semantic-lab.legacy.properties.py  org.open-semantic-lab.legacy.py  packages_json_consistency_check.py  push_package_changes.py  reusable.py  sync_package_tags.py  world.opensemantic.base.py  world.opensemantic.batteries.py  world.opensemantic.characteristics.basic.py  world.opensemantic.characteristics.quantitative.py  world.opensemantic.core.py  world.opensemantic.demo.lab.virtual.py  world.opensemantic.demo.py  world.opensemantic.lab.demo.lab.virtual.py  world.opensemantic.lab.py  world.opensemantic.lab.virtual.py  world.opensemantic.meta.docs.py  world.opensemantic.ontology.py  world.opensemantic.quantities.py
