# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = osw-package-maintenance
description = Python scripts to build OSW page packages, common page package repositories as submodules
author = "Simon Stier"
author_email = simon.stier@isc.fraunhofer.de
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/OpenSemanticWorld-Packages/osw-package-maintenance
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/OpenSemanticWorld-Packages/osw-package-maintenance

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =scripts

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    osw

[tool.black]
line-length = 88

[flake8]
# Some sane defaults for the code style checker flake8
# 79 characters is the default line length according to PEP8
# 88 is the option recommended by black
max_line_length = 88
select = C,E,F,W,B,B950
extend_ignore = E203, E501, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
# E501 allows a line length of 79 only
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    src/osw/model/entity.py #autogenerated
per-file-ignores =
    __init__.py:F401

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = osw-package-maintenance
extensions =
    markdown
    no_skeleton
    pre_commit
